# platform.core.appfw.debug-launchpad

./: CMakeLists.txt  NOTICE  debug-launchpad.manifest
feature/: preexec.h  preload.h
include/: access_control.h  app_signal.h  app_sock.h  aul_util.h  common.h  config.h  debug_util.h  defs.h  file_util.h  gl.h  key.h  menu_db_util.h  perf.h  preload.h  security_util.h  signal_util.h  simple_util.h  socket_util.h
packaging/: debug-launchpad.service  debug-launchpad.socket  debug-launchpad.spec
src/: app_sock.c  common.c  config.h  debug-launchpad.c  debug_util.c  file_util.c  fileutils.c  fileutils.h  gl.h  heap_dbg.h  launchpad.c  security_util.c  sigchild.h  signal_util.c  simple_util.c  socket_util.c
